# spo_lab1

./: CMakeLists.txt  README.md  main.c  part1.c  part1.h  part2.c  part2.h  utils.c  xfs.h  xfs_operations.c  xfs_operations.h
includes/: utils.h  xfs_operations.h
modules/: Findblkid.cmake 
perl/: main.pm
perl/lib/: part1.pm  part2.pm
